<resources>
    <string name="app_name">Leviosa</string>
    <string name="text_on_create">onCreate() method called</string>
    <string name="text_on_start">onStart() method called</string>
    <string name="text_on_resume">onResume() method called</string>
    <string name="text_on_stop">onStop() method called</string>
    <string name="text_on_pause">onPause() method called</string>
    <string name="text_on_restart">onRestart() method called</string>
    <string name="text_on_destroy">onDestroy() method called</string>
    <string name="text_finish">finish() method called</string>
    <string name="text_is_finishing">isFinishing() method called</string>
    <string name="text_hello"> Hello Kotlin ! </string>
    <string name="text_question"> How are you ? </string>
    <string name="text_toast">You should not click :O !</string>
    <string name="text_button_toast">Dont click</string>
    <string name="text_button_quiz">Quiz</string>
    <string name="question_profession">Which professions do you like the most (Maximum 2 answers)</string>
    <string name="answer_lawyer">Lawyer</string>
    <string name="answer_movie_star">Movie Star</string>
    <string name="answer_teacher">Teacher</string>
    <string name="answer_author_novels">Author of Novels</string>
    <string name="answer_company_manager">Company Manager</string>
    <string name="answer_landscaper">Landscaper</string>
    <string name="answer_craftsman">Craftsman</string>
    <string name="answer_butcher">Butcher</string>
    <string name="question_boggart">What does a boggart turn into in front of you ?</string>
    <string name="answer_snake">Snake</string>
    <string name="answer_clown">Clown</string>
    <string name="answer_spider">Spider</string>
    <string name="answer_dementor">Dementor</string>
    <string name="question_hermione">Do you like Hermione Granger ?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="question_creature">Which creature is your favorite ?</string>
    <string name="answer_hippogriffe">Hippogriffe</string>
    <string name="question_phoenix">Phoenix</string>
    <string name="question_niffleur">Niffleur</string>
    <string name="question_basilic">Basilic</string>
    <string name="question_flaw">What is your worst flaw?</string>
    <string name="answer_selfish">Selfish</string>
    <string name="answer_fearful">Fearful</string>
    <string name="answer_arrogant">Arrogant</string>
    <string name="answer_unstable">Unstable</string>
    <string name="question_wizard">Which wizard do you prefer ?</string>
    <string name="answer_dumbledore">Dumbledore</string>
    <string name="answer_mc_gonagall">McGonagall</string>
    <string name="answer_hadrig">Hagrid</string>
    <string name="answer_sirius_black">Sirius Black</string>
    <string name="answer_harry_potter">Harry Potter</string>
    <string name="answer_fred_weasley">Fred Weasley</string>
    <string name="answer_george_weasley">George Weasley</string>
    <string name="answer_ron_weasley">Ron Weasley</string>
    <string name="answer_hermione_granger">Hermione Granger</string>
    <string name="answer_neville">Neville</string>
    <string name="answer_severus_rogue">Severus Rogue</string>
    <string name="answer_tom_jedusor">Tom Jedusor</string>
    <string name="answer_voldemort">Voldemort</string>
    <string name="answer_draco_malefoy">Drago Malefoy</string>
    <string name="answer_cadwallader">Cadwallader</string>
    <string name="answer_luna_lovegood">Luna Lovegood</string>
    <string name="answer_cho_chang">Cho Chang</string>
    <string name="answer_filius_flitwick">Filius Flitwick </string>
    <string name="answer_sibyl_trelawney">Sibyl Trelawney</string>
    <string name="text_toast_error">2 answers max</string>
    <string name="answer_mandatory">Please input an answer</string>
    <string name="text_button_comment">Add</string>
    <string name="text_comment">Comment :</string>
    <string name="edit_text_comment">Your comment</string>
    <string name="griffondor">Gryffindor</string>
    <string name="serdaigle">RavenClaw</string>
    <string name="poufsouffle">Hufflepuff</string>
    <string name="serpentard">Slytherin</string>
    <string name="moldu">Moldu</string>
    <string name="text_win">Congratulations</string>
    <string name="text_be">you are </string>
    <string name="text_toast_error_comment">You have already sent a comment</string>
    <string name="text_toast_ok">Comment sent !</string>
    <string name="name_placeholder">Your name</string>
    <string name="personal_infos_label">Personal information</string>
    <string name="start_quizz">Start quiz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Pou De Lard</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_quiz">Quiz</string>
    <string name="menu_wizard">Wizards List</string>
    <string-array name="wizards">
        <item>Dumbledore</item>
        <item>Hagrid</item>
        <item>Harry Potter</item>
        <item>Ron Weasley</item>
        <item>Hermione Granger</item>
        <item>Severus Rogue</item>
        <item>Voldemort</item>
        <item>Drago Malefoy</item>
        <item>McGonagall</item>
    </string-array>
    <string name="menu_spells">Spells List</string>
    <string name="spell_accio">Bring something to the spell caster</string>
    <string name="spell_allohomora">Open a locked door</string>
    <string name="spell_amplificatum">Make an object bigger</string>
    <string name="spell_avada_kedavra">Kill someone (forbidden spell)</string>
    <string name="spell_collaporta">Seal a door</string>
    <string name="spell_crac_badaboum">Break an object</string>
    <string name="spell_destructum">Destroy something</string>
    <string name="spell_diffinito">Cut something</string>
    <string name="spell_dissensium">Open a secret way</string>
    <string name="spell_ectoplasmus">Take something off</string>
    <string name="spell_elasticus">Jump very high</string>
    <string name="text_button_retry"> Retry </string>
    <string name="text_settings_saved"> Settings saved </string>
    <string name="text_settings_unset"> Please input all the fields </string>
</resources>